build_errors_3.txt
   Compiling twister v0.5.0 (C:\Users\pixel\Downloads\twister)
error[E0433]: cannot find `embeddings` in `ml`
  --> src\dispatch\signal_dispatch.rs:48:35
   |
48 |     qdrant: Arc<Option<crate::ml::embeddings::EmbeddingStore>>,
   |                                   ^^^^^^^^^^ could not find `embeddings` in `ml`
   |
help: consider importing this module
   |
 6 + use crate::embeddings;
   |
help: if you import `embeddings`, refer to it directly
   |
48 -     qdrant: Arc<Option<crate::ml::embeddings::EmbeddingStore>>,
48 +     qdrant: Arc<Option<embeddings::EmbeddingStore>>,
   |

error[E0433]: cannot find `embeddings` in `ml`
  --> src\dispatch\signal_dispatch.rs:80:39
   |
80 |         qdrant: Arc<Option<crate::ml::embeddings::EmbeddingStore>>,
   |                                       ^^^^^^^^^^ could not find `embeddings` in `ml`
   |
help: consider importing this module
   |
 6 + use crate::embeddings;
   |
help: if you import `embeddings`, refer to it directly
   |
80 -         qdrant: Arc<Option<crate::ml::embeddings::EmbeddingStore>>,
80 +         qdrant: Arc<Option<embeddings::EmbeddingStore>>,
   |

warning: unused import: `serde_json::Value`
 --> src\ai\query_tools.rs:3:5
  |
3 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unnecessary parentheses around method argument
  --> src\ai\query_tools.rs:55:13
   |
55 |             (target_azimuth * std::f64::consts::PI / 180.0),
   |             ^                                             ^
   |
   = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
   |
55 -             (target_azimuth * std::f64::consts::PI / 180.0),
55 +             target_azimuth * std::f64::consts::PI / 180.0 ,
   |

warning: unused import: `std::collections::HashMap`
 --> src\forensic.rs:9:5
  |
9 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `OpenOptions` and `create_dir_all`
  --> src\forensic.rs:10:21
   |
10 | use std::fs::{File, OpenOptions, create_dir_all};
   |                     ^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `BufWriter`
  --> src\forensic.rs:11:15
   |
11 | use std::io::{BufWriter, Write};
   |               ^^^^^^^^^

warning: unused import: `Path`
  --> src\forensic.rs:12:17
   |
12 | use std::path::{Path, PathBuf};
   |                 ^^^^

warning: unused imports: `DateTime` and `Utc`
 --> src\knowledge_graph\cognee_schema.rs:1:14
  |
1 | use chrono::{DateTime, Utc};
  |              ^^^^^^^^  ^^^

warning: unused import: `FieldParticleGPU`
  --> src\ml\batch_accumulation.rs:15:50
   |
15 | use super::field_particle::{FieldParticleBuffer, FieldParticleGPU, HitListAccumulator};
   |                                                  ^^^^^^^^^^^^^^^^

warning: unused import: `std::error::Error`
 --> src\ml\event_corpus.rs:5:5
  |
5 | use std::error::Error;
  |     ^^^^^^^^^^^^^^^^^

warning: unused imports: `AdamWConfig`, `AdamW`, and `Optimizer`
 --> src\ml\material_learning.rs:2:19
  |
2 | use burn::optim::{AdamW, AdamWConfig, Optimizer};
  |                   ^^^^^  ^^^^^^^^^^^  ^^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> src\ml\material_learning.rs:5:5
  |
5 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `super::data_contracts::FieldParticle`
  --> src\ml\rt_blind_rays.rs:13:5
   |
13 | use super::data_contracts::FieldParticle;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `HitListAccumulator`
  --> src\ml\rt_blind_rays.rs:14:47
   |
14 | use super::field_particle::{FieldParticleGPU, HitListAccumulator};
   |                                               ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::f32::consts::PI`
  --> src\ml\rt_blind_rays.rs:18:5
   |
18 | use std::f32::consts::PI;
   |     ^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Buffer` and `Queue`
 --> src\ml\vbuffer_render.rs:8:12
  |
8 | use wgpu::{Buffer, Device, Queue, Texture, TextureView, RenderPipeline};
  |            ^^^^^^          ^^^^^

warning: unused imports: `Device` and `Queue`
 --> src\ml\visibility_culling.rs:9:20
  |
9 | use wgpu::{Buffer, Device, Queue};
  |                    ^^^^^^  ^^^^^

warning: unused import: `std::mem`
  --> src\ml\visibility_culling.rs:10:5
   |
10 | use std::mem;
   |     ^^^^^^^^

warning: unused import: `burn::backend::Wgpu`
 --> src\ml\wav2vec2_loader.rs:1:5
  |
1 | use burn::backend::Wgpu;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `wgpu::util::DeviceExt`
 --> src\particle_system\frustum_culler.rs:3:5
  |
3 | use wgpu::util::DeviceExt;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `wgpu::util::DeviceExt`
 --> src\particle_system\renderer.rs:4:5
  |
4 | use wgpu::util::DeviceExt;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> src\ml\event_corpus.rs:42:13
   |
42 |         let mut wav2vec2 = Wav2Vec2Model::<Wgpu>::load(&device).await?;
   |             ----^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Write`
  --> src\forensic.rs:11:26
   |
11 | use std::io::{BufWriter, Write};
   |                          ^^^^^

warning: value assigned to `response` is never read
  --> src\ai\reasoning_engine.rs:33:28
   |
33 |         let mut response = String::new();
   |                            ^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `args`
  --> src\ai\query_tools.rs:34:9
   |
34 |         args: &str,
   |         ^^^^ help: if this is intentional, prefix it with an underscore: `_args`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `recon`
   --> src\dispatch\signal_dispatch.rs:248:50
    |
248 |                         Ok((anomaly, mut latent, recon)) => {
    |                                                  ^^^^^ help: if this is intentional, prefix it with an underscore: `_recon`

warning: variable `event_count` is assigned to, but never used
   --> src\forensic.rs:417:17
    |
417 |             let mut event_count: u64 = 0;
    |                 ^^^^^^^^^^^^^^^
    |
    = note: consider using `_event_count` instead

warning: value assigned to `event_count` is never read
   --> src\forensic.rs:422:25
    |
422 |                         event_count += 1;
    |                         ^^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?

warning: unused variable: `start_date`
   --> src\forensic.rs:581:9
    |
581 |         start_date: Option<&str>,
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_start_date`

warning: unused variable: `end_date`
   --> src\forensic.rs:582:9
    |
582 |         end_date: Option<&str>,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_end_date`

warning: unused variable: `particle`
  --> src\ml\field_dispatch.rs:88:17
   |
88 |             let particle = FieldParticle {
   |                 ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_particle`

warning: unused variable: `distance`
   --> src\resonance\voxel_grid.rs:175:38
    |
175 |     pub fn average_along_path(&self, distance: f32) -> f32 {
    |                                      ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_distance`

warning: unused variable: `k2`
  --> src\resonance\rf_propagation.rs:34:13
   |
34 |         let k2 = k * k;
   |             ^^ help: if this is intentional, prefix it with an underscore: `_k2`

warning: unused variable: `local_k2`
  --> src\resonance\rf_propagation.rs:69:29
   |
69 |                         let local_k2 = local_k * local_k;
   |                             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_local_k2`

warning: unused variable: `material_library`
   --> src\state.rs:209:13
    |
209 |         let material_library =
    |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_material_library`

warning: unused variable: `slot`
   --> src\vbuffer.rs:262:30
    |
262 |     fn read_frame_cpu(&self, slot: usize, base_offset: usize) -> Vec<[half::f16; 4]> {
    |                              ^^^^ help: if this is intentional, prefix it with an underscore: `_slot`

warning: unused variable: `base_offset`
   --> src\vbuffer.rs:262:43
    |
262 |     fn read_frame_cpu(&self, slot: usize, base_offset: usize) -> Vec<[half::f16; 4]> {
    |                                           ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_base_offset`

For more information about this error, try `rustc --explain E0433`.
warning: `twister` (lib) generated 36 warnings
error: could not compile `twister` (lib) due to 2 previous errors; 36 warnings emitted
